// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parser Deep virtual elements 1`] = `
Document {
  "children": [
    VirtualElement {
      "binding": Binding {
        "name": "foo",
        "param": " foo ",
        "range": Range {
          "end": Position {
            "column": 20,
            "line": 0,
            "offset": 20,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
      "children": [
        VirtualElement {
          "binding": Binding {
            "name": "bar",
            "param": " bar ",
            "range": Range {
              "end": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
              "start": Position {
                "column": 20,
                "line": 0,
                "offset": 20,
              },
            },
          },
          "children": [],
          "end": Comment {
            "content": " /ko ",
            "range": Range {
              "end": Position {
                "column": 52,
                "line": 0,
                "offset": 52,
              },
              "start": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
            },
          },
          "hidden": false,
          "range": Range {
            "end": Position {
              "column": 52,
              "line": 0,
              "offset": 52,
            },
            "start": Position {
              "column": 20,
              "line": 0,
              "offset": 20,
            },
          },
          "start": Comment {
            "content": " ko bar: bar ",
            "range": Range {
              "end": Position {
                "column": 40,
                "line": 0,
                "offset": 40,
              },
              "start": Position {
                "column": 20,
                "line": 0,
                "offset": 20,
              },
            },
          },
        },
      ],
      "end": Comment {
        "content": " /ko ",
        "range": Range {
          "end": Position {
            "column": 64,
            "line": 0,
            "offset": 64,
          },
          "start": Position {
            "column": 52,
            "line": 0,
            "offset": 52,
          },
        },
      },
      "hidden": false,
      "range": Range {
        "end": Position {
          "column": 64,
          "line": 0,
          "offset": 64,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "start": Comment {
        "content": " ko foo: foo ",
        "range": Range {
          "end": Position {
            "column": 20,
            "line": 0,
            "offset": 20,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;

exports[`parser Hidden virtual element 1`] = `
Document {
  "children": [
    VirtualElement {
      "binding": Binding {
        "name": "foo",
        "param": " foo ",
        "range": Range {
          "end": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
      "children": [],
      "end": Comment {
        "content": " /ko ",
        "range": Range {
          "end": Position {
            "column": 33,
            "line": 0,
            "offset": 33,
          },
          "start": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
        },
      },
      "hidden": true,
      "range": Range {
        "end": Position {
          "column": 33,
          "line": 0,
          "offset": 33,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "start": Comment {
        "content": " #ko foo: foo ",
        "range": Range {
          "end": Position {
            "column": 21,
            "line": 0,
            "offset": 21,
          },
          "start": Position {
            "column": 0,
            "line": 0,
            "offset": 0,
          },
        },
      },
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;

exports[`parser Element bindings 1`] = `
Document {
  "children": [
    Element {
      "attributes": [
        Attribute {
          "name": "data-bind",
          "namespace": undefined,
          "prefix": undefined,
          "range": Range {
            "end": Position {
              "column": 23,
              "line": 0,
              "offset": 23,
            },
            "start": Position {
              "column": 5,
              "line": 0,
              "offset": 5,
            },
          },
          "value": "0: bar",
        },
      ],
      "bindings": [
        Binding {
          "name": "0",
          "param": "bar",
          "range": Range {
            "end": Position {
              "column": 22,
              "line": 0,
              "offset": 22,
            },
            "start": Position {
              "column": 16,
              "line": 0,
              "offset": 16,
            },
          },
        },
      ],
      "children": [],
      "range": Range {
        "end": Position {
          "column": 30,
          "line": 0,
          "offset": 30,
        },
        "start": Position {
          "column": 0,
          "line": 0,
          "offset": 0,
        },
      },
      "tagName": "div",
    },
  ],
  "range": Range {
    "end": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
    "start": Position {
      "column": 0,
      "line": 0,
      "offset": 0,
    },
  },
}
`;
